# X_RAY_Class

./: .Dockerignore  .gitignore  .pdm-python  Dockerfile  README  main.py  pyproject.toml  requirements.txt
data/: data_map.csv  data_map_fixed.csv
experiments/: exp_densenet.py  run_experiment.py  run_experiment2.py
models/: base_model.py  densenet_model.py  resnet_model.py
my_trainer/: dataset.py  train_utils.py  trainer.py  transforms.py
notebook/: process.ipynb
